--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SQLinjectdemo">
-        <activity android:name=".AllEmployee"></activity>
+        <activity android:name=".AddActivity"></activity>
+        <activity android:name=".AllEmployee" />
         <activity android:name=".DataViewer" />
         <activity android:name=".Result" />
         <activity android:name=".MainActivity">
